CHROMIUM: memory: tegra124: Add RAM code support
The DRAM configuration might be different on the same platform.
Therefore the driver should read the RAM code to determine which
EMC tables to load when more than one set of EMC tables exist.

BUG=chrome-os-partner:25909
TEST=Build and boot on Nyan; EMC scaling still works.
2GB Nyan shows ram code 0 and 4GB Nyan shows ram code 1.

Signed-off-by: Danny Huang <dahuang@nvidia.com>
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/187775
Reviewed-by: Dylan Reid <dgreid@chromium.org>

BUG=chrome-os-partner:30851
TEST=verified emc driver loads correctly

Change-Id: I82c1fb661b3a5d774f657dabcd204e9422854abe
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/216787
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -61,7 +61,7 @@ config TEGRA124_MC
 config TEGRA124_EMC
 	bool "Tegra124 External Memory Controller(EMC) driver"
 	default y
-	depends on TEGRA124_MC
+	depends on TEGRA124_MC && MFD_SYSCON
 	help
 	  This driver is for the External Memory Controller(EMC) module
 	  available in Tegra124 SoCs.
