--- a/arch/arm/boot/dts/qcom-ipq8064-ap148.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-ap148.dts
@@ -7,6 +7,7 @@
 	reserved-memory {
 		#address-cells = <1>;
 		#size-cells = <1>;
+		ranges;
 		rsvd@41200000 {
 			reg = <0x41200000 0x300000>;
 			no-map;
@@ -49,6 +50,7 @@
 					drive-strength = <12>;
 				};
 			};
+
 			nand_pins: nand_pins {
 				mux {
 					pins = "gpio34", "gpio35", "gpio36",
@@ -71,7 +73,6 @@
 					bias-bus-hold;
 				};
 			};
-
 		};
 
 		gsbi@16300000 {
