UPSTREAM: cpuidle: cpuidle-cps: add MIPS CPS cpuidle driver
This patch adds a cpuidle driver for systems based around the MIPS
Coherent Processing System (CPS) architecture. It supports four idle
states:

  - The standard MIPS wait instruction.

  - The non-coherent wait, clock gated & power gated states exposed by
    the recently added pm-cps layer.

The pm-cps layer is used to enter all the deep idle states. Since cores
in the clock or power gated states cannot service interrupts, the
gic_send_ipi_single function is modified to send a power up command for
the appropriate core to the CPC in cases where the target CPU has marked
itself potentially incoherent.

Signed-off-by: Paul Burton <paul.burton@imgtec.com>
(cherry picked from commit d050894435cdc78807e714a0148527542a583e87)

BUG=chrome-os-partner:30753
TEST=Build and boot on Malta

Change-Id: I893cb0439e0eb8afd26463e59fe52d5abdb06235
Signed-off-by: Andrew Bresticker <abrestic@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/209130
Reviewed-by: Olof Johansson <olofj@chromium.org>

Conflicts:
	drivers/cpuidle/Kconfig

--- a/drivers/cpuidle/Makefile
+++ b/drivers/cpuidle/Makefile
@@ -21,6 +21,10 @@ obj-$(CONFIG_ARM_ROCKCHIP_CPUIDLE)      += cpuidle-rockchip.o
 obj-$(CONFIG_ARM64_CPUIDLE)		+= cpuidle-arm64.o
 
 ###############################################################################
+# MIPS drivers
+obj-$(CONFIG_MIPS_CPS_CPUIDLE)		+= cpuidle-cps.o
+
+###############################################################################
 # POWERPC drivers
 obj-$(CONFIG_PSERIES_CPUIDLE)		+= cpuidle-pseries.o
 obj-$(CONFIG_POWERNV_CPUIDLE)		+= cpuidle-powernv.o
