FROMLIST: memory: Add NVIDIA Tegra memory controller support
The memory controller on NVIDIA Tegra exposes various knobs that can be
used to tune the behaviour of the clients attached to it.

Currently this driver sets up the latency allowance registers to the HW
defaults. Eventually an API should be exported by this driver (via a
custom API or a generic subsystem) to allow clients to register latency
requirements.

This driver also registers an IOMMU (SMMU) that's implemented by the
memory controller. It is supported on Tegra30, Tegra114 and Tegra124
currently. Tegra20 has a GART instead.

Changes in v4:
- remove DMA/IOMMU integration glue
- don't initialize linear SMMU mapping
- fail attachment for non-masters
- free empty page tables

Changes in v3:
- drop changes related to probe ordering that were rejected
- remove old SMMU driver

BUG=chrome-os-partner:31213
TEST=boot with the rest of the DRM series, see full resolution graphics work

Change-Id: I8c70b1ebbde4e5303d5afd6334f03f0507559c6d
Signed-off-by: Thierry Reding <treding@nvidia.com>
[olofj: Compilation fixups -- added linux/mm.h include and removed stale
struct members for the t132 entry]
Signed-off-by: Olof Johansson <olofj@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/223600
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/drivers/memory/Makefile
+++ b/drivers/memory/Makefile
@@ -11,3 +11,4 @@ obj-$(CONFIG_TEGRA20_MC)	+= tegra20-mc.o
 obj-$(CONFIG_TEGRA30_MC)	+= tegra30-mc.o
 obj-$(CONFIG_TEGRA124_MC)	+= tegra124-mc.o
 obj-$(CONFIG_TEGRA124_EMC)	+= tegra124-emc.o
+obj-$(CONFIG_ARCH_TEGRA)	+= tegra/
