CHROMIUM: firmware: google: Add ARM/ARM64 support to memconsole
This patch expands the Google firmware memory console driver to also
work on certain device tree based platforms running coreboot, such as ARM/ARM64
Chromebooks. It splits the code relying on x86-centric features (ACPI, EBDA,
DMI) out into an extra file, and adds yet another path to look up the (coreboot)
memory console through the coreboot table. In order to find that, a second level
bootloader must have installed the 'coreboot' compatible device tree node that
describes its base address and size.

BUG=chrome-os-partner:29311
TEST=Confirmed that it works on both Rush_Ryu and Samus. I have
no idea how to test the EBDA or CBMEM-without-ACPI code paths, but I
tried hard to keep all the logic intact and mostly just moved whole
functions around.

Signed-off-by: Julius Werner <jwerner@chromium.org>
Signed-off-by: Furquan Shaikh <furquan@google.com>
Change-Id: Ibca9012c6b72e4cc8ef8a3d4694f8fa6aa58ff0d
Reviewed-on: https://chromium-review.googlesource.com/223066
Tested-by: Furquan Shaikh <furquan@chromium.org>
Reviewed-by: Olof Johansson <olofj@chromium.org>
Commit-Queue: Furquan Shaikh <furquan@chromium.org>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -408,6 +408,8 @@ source "net/Kconfig"
 
 source "drivers/Kconfig"
 
+source "drivers/firmware/Kconfig"
+
 source "fs/Kconfig"
 
 source "arch/arm64/kvm/Kconfig"
