--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -2272,6 +2272,8 @@ source "net/Kconfig"
 
 source "drivers/Kconfig"
 
+source "drivers/firmware/Kconfig"
+
 source "fs/Kconfig"
 
 source "arch/arm/Kconfig.debug"
