--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -374,7 +374,7 @@
 	};
 
 	sdhci@700b0600 {
-		compatible = "nvidia,tegra124-sdhci", "nvidia,tegra114-sdhci";
+		compatible = "nvidia,tegra132-sdhci", "nvidia,tegra124-sdhci", "nvidia,tegra114-sdhci";
 		reg = <0x0 0x700b0600 0x200>;
 		interrupts = <GIC_SPI 31 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&tegra_car TEGRA124_CLK_SDMMC4>;
@@ -384,7 +384,7 @@
 	};
 
 	sdhci@700b0000 {
-		compatible = "nvidia,tegra124-sdhci", "nvidia,tegra114-sdhci";
+		compatible = "nvidia,tegra132-sdhci", "nvidia,tegra124-sdhci", "nvidia,tegra114-sdhci";
 		reg = <0x0 0x700b0000 0x200>;
 		interrupts = <GIC_SPI 14 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&tegra_car TEGRA124_CLK_SDMMC1>;
@@ -394,7 +394,7 @@
 	};
 
 	sdhci@700b0200 {
-		compatible = "nvidia,tegra124-sdhci", "nvidia,tegra114-sdhci";
+		compatible = "nvidia,tegra132-sdhci", "nvidia,tegra124-sdhci", "nvidia,tegra114-sdhci";
 		reg = <0x0 0x700b0200 0x200>;
 		interrupts = <GIC_SPI 15 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&tegra_car TEGRA124_CLK_SDMMC2>;
@@ -404,7 +404,7 @@
 	};
 
 	sdhci@700b0400 {
-		compatible = "nvidia,tegra124-sdhci", "nvidia,tegra114-sdhci";
+		compatible = "nvidia,tegra132-sdhci", "nvidia,tegra124-sdhci", "nvidia,tegra114-sdhci";
 		reg = <0x0 0x700b0400 0x200>;
 		interrupts = <GIC_SPI 19 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&tegra_car TEGRA124_CLK_SDMMC3>;
