--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -372,6 +372,7 @@ source "kernel/power/Kconfig"
 
 config ARCH_SUSPEND_POSSIBLE
 	def_bool y
+	depends on !ARCH_TEGRA
 
 config ARM64_CPU_SUSPEND
 	def_bool PM_SLEEP
