CHROMIUM: arm64: dts:  tegra132: Add EMC table for norrin
This adds revision 0x19 EMC tables for the Tegra132 norrin platform.
It also adds the memory-controller nodes required for it into the
tegra132.dtsi file.

BUG=chrome-os-partner:30851
TEST=verified emc driver loads correctly

Change-Id: I371d3b6619c64ff99755abbfb56ce0a928bdac2a
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/216804
Reviewed-by: Olof Johansson <olofj@chromium.org>
Tested-by: Olof Johansson <olofj@chromium.org>
Commit-Queue: Joseph Lo <josephl@nvidia.com>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -398,6 +398,35 @@
 		reset-names = "fuse";
 	};
 
+	mc: memory-controller@70019000 {
+		compatible = "nvidia,tegra124-mc";
+		reg = <0x0 0x70019000 0x0 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+	};
+
+	memory-controller@7001b000 {
+		compatible = "nvidia,tegra124-emc";
+		reg = <0x0 0x7001b000 0x0 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		nvidia,mc = <&mc>;
+		nvidia,pmc = <&pmc>;
+		clocks = <&tegra_car TEGRA124_CLK_EMC>,
+			 <&tegra_car TEGRA124_CLK_PLL_M>,
+			 <&tegra_car TEGRA124_CLK_PLL_C>,
+			 <&tegra_car TEGRA124_CLK_PLL_P>,
+			 <&tegra_car TEGRA124_CLK_CLK_M>,
+			 <&tegra_car TEGRA124_CLK_PLL_M_UD>,
+			 <&tegra_car TEGRA124_CLK_PLL_C2>,
+			 <&tegra_car TEGRA124_CLK_PLL_C3>,
+			 <&tegra_car TEGRA124_CLK_PLL_C_UD>,
+			 <&tegra_car TEGRA124_CLK_OVERRIDE_EMC>;
+		clock-names = "emc", "pll_m", "pll_c", "pll_p", "clk_m",
+			"pll_m_ud", "pll_c2", "pll_c3", "pll_c_ud",
+			"emc_override";
+	};
+
 	ccplex_clock: ccplex-clock@70040000 {
 		compatible = "nvidia,tegra132-ccplex-clk";
 		reg = <0x0 0x70040000 0x0 0x1000>;
