CHROMIUM: arm64: dts: tegra132: bind PMC to syscon device
Make the PMC compatible with "syscon" so that drivers can use the
syscon interface to access PMC registers. Also extend the PMC
reg property to include the remaining PMC registers.

Based on similar work done by Andrew Bresticker for Tegra124.

BUG=chrome-os-partner:30851
TEST=verified emc driver loads correctly

Change-Id: If28f4b90b3bb87d444749d62cbcd33016ac7cd28
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/216805
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -383,8 +383,8 @@
 	};
 
 	pmc: pmc@7000e400 {
-		compatible = "nvidia,tegra124-pmc";
-		reg = <0x0 0x7000e400 0x0 0x400>;
+		compatible = "nvidia,tegra124-pmc", "syscon";
+		reg = <0x0 0x7000e400 0x0 0x800>;
 		clocks = <&tegra_car TEGRA124_CLK_PCLK>, <&clk32k_in>;
 		clock-names = "pclk", "clk32k_in";
 	};
