CHROMIUM: arm64: dts: tegra132: Update clock binding for t132
Add tegra132-car but keep tegra124-car as a fallback for norrin.

BUG=None
TEST=Compile and boot tested with ARCH=arm64

Change-Id: Ice94a1247ed6b6433eb7c0651c36746aed562adb
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/215446
Tested-by: Vince Hsu <vinceh@nvidia.com>
Reviewed-by: David Riley <davidriley@chromium.org>
Commit-Queue: Vince Hsu <vinceh@nvidia.com>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -35,7 +35,7 @@
 	};
 
 	tegra_car: clock@60006000 {
-		compatible = "nvidia,tegra124-car";
+		compatible = "nvidia,tegra132-car", "nvidia,tegra124-car";
 		reg = <0x0 0x60006000 0x1000>;
 		#clock-cells = <1>;
 		#reset-cells = <1>;
