CHROMIUM: arm64: dts: tegra132 - Add XUSB pad controller
Based on Thierry's patch for tegra124's dtsi:
ce90d32 ARM: tegra: tegra124: Add XUSB pad controller

Signed-off-by: Benson Leung <bleung@chromium.org>

BUG=chrome-os-partner:30796
TEST=build tested for rush_ryu.

Change-Id: Ie57f8b718b23f59210f8d090815ac81edcbdc5af
Reviewed-on: https://chromium-review.googlesource.com/219617
Reviewed-by: Andrew Bresticker <abrestic@chromium.org>
Tested-by: Benson Leung <bleung@chromium.org>
Commit-Queue: Benson Leung <bleung@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -3,6 +3,7 @@
 #include <dt-bindings/memory/tegra-swgroup.h>
 #include <dt-bindings/gpio/tegra-gpio.h>
 #include <dt-bindings/pinctrl/pinctrl-tegra.h>
+#include <dt-bindings/pinctrl/pinctrl-tegra-xusb.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/thermal/tegra124-soctherm.h>
 #include <dt-bindings/thermal/tegra132-dfll-trips.h>
@@ -587,6 +588,15 @@
 		nvidia,ci = <0>;
 		nvidia,cg = <2>;
 		status = "disabled";
+	};
+
+	padctl: padctl@0,7009f000 {
+		compatible = "nvidia,tegra124-xusb-padctl";
+		reg = <0x0 0x7009f000 0x0 0x1000>;
+		resets = <&tegra_car 142>;
+		reset-names = "padctl";
+
+		#phy-cells = <1>;
 	};
 
 	sdhci@700b0600 {
