CHROMIUM: ARM: DTS: Tegra124: add thermtrip threshold for T124 chips
Add the necessary DT data to reset the SoC when the (specified)
temperature boundary is crossed.  This is not to be adjusted upwards.

By itself, this will only trigger an SoC reset.  Subsequent patches
will integrate the PMIC shutdown data for some boards.

BUG=chrome-os-partner:30834
TEST=can read temperatures from thermal sysfs

Change-Id: Ib1ba1fc66a5800bf73e2ef672b348c767cef841b
Signed-off-by: Paul Walmsley <pwalmsley@nvidia.com>
Signed-off-by: Wei Ni <wni@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/212432
Reviewed-by: Olof Johansson <olofj@chromium.org>
Tested-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm/boot/dts/tegra124.dtsi
+++ b/arch/arm/boot/dts/tegra124.dtsi
@@ -595,6 +595,21 @@
 		resets = <&tegra_car 78>;
 		reset-names = "soctherm";
 		#thermal-sensor-cells = <1>;
+
+		thermtrip {
+			  sensor-groups {
+				  cpu {
+					  temperature = <104000>;
+				  };
+				  gpu {
+					  temperature = <105000>;
+				  };
+				  mem {
+					  temperature = <105000>;
+				  };
+			  };
+		};
+
 	};
 
 	cpus {
