--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -16,6 +16,10 @@
 	compatible = "google,veyron-pinky-rev1", "google,veyron-pinky",
 		     "google,veyron", "rockchip,rk3288";
 
+	aliases {
+		i2c20 = &i2c20;
+	};
+
 	memory {
 		reg = <0x0 0x80000000>;
 	};
@@ -226,6 +230,34 @@
 	status = "okay";
 	vmmc-supply = <&vcc33_sd_regulator>;
 	wp-gpios = <&gpio7 10 GPIO_ACTIVE_LOW>;
+};
+
+&spi0 {
+	status = "okay";
+
+	cros_ec: ec@0 {
+		compatible = "google,cros-ec-spi";
+		spi-max-frequency = <3000000>;
+		interrupt-parent = <&gpio7>;
+		interrupts = <7 IRQ_TYPE_LEVEL_LOW>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&ec_int>;
+		reg = <0>;
+
+		i2c20: i2c-tunnel {
+			compatible = "google,cros-ec-i2c-tunnel";
+			google,remote-bus = <0>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			battery: sbs-battery@b {
+				compatible = "sbs,sbs-battery";
+				reg = <0xb>;
+				sbs,i2c-retry-count = <2>;
+				sbs,poll-retry-count = <1>;
+			};
+		};
+	};
 };
 
 &i2c0 {
@@ -442,6 +474,12 @@
 		};
 	};
 
+	cros-ec {
+		ec_int: ec-int {
+			rockchip,pins = <7 7 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+	};
+
 	lcd {
 		lcd_en: lcd-en {
 			rockchip,pins = <7 15 RK_FUNC_GPIO &pcfg_pull_none>;
@@ -518,3 +556,5 @@
 	dr_mode = "host";
 	status = "okay";
 };
+
+#include "cros-ec-keyboard.dtsi"
