CHROMIUM: memory: tegra124-emc: Enable for T132 as well
The tegra124-emc driver should also be enabled if tegra132 is enabled.

BUG=chrome-os-partner:30851
TEST=verified emc driver loads correctly

Change-Id: Ib1d05317f83f016aa16c04eb1d5a5016f0d8a3c7
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/216794
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -53,7 +53,7 @@ config TEGRA30_MC
 config TEGRA124_MC
 	bool "Tegra124 Memory Controller(MC) driver"
 	default y
-	depends on ARCH_TEGRA_124_SOC
+	depends on ARCH_TEGRA_124_SOC || ARCH_TEGRA_132_SOC
 	help
 	  This driver is for the Memory Controller(MC) module available
 	  in Tegra124 SoCs.
