CHROMIUM: soc/tegra: add AArch64 trampoline for Tegra132
Tegra132 resets into AArch32 after each architectural reset. SW needs to
execute a specified sequence to switch into AArch64 mode. This change
adds this sequence and initialize it at early initcall stage.

Based on the work by: Peng Du <pdu@nvidia.com>

BUG=none
TEST=build and boot on norrin64

Change-Id: I1299698481a45a226f9926456c0094766826071d
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/213087
Reviewed-by: David Riley <davidriley@chromium.org>
Commit-Queue: David Riley <davidriley@chromium.org>
Tested-by: David Riley <davidriley@chromium.org>

--- a/drivers/soc/tegra/Makefile
+++ b/drivers/soc/tegra/Makefile
@@ -3,3 +3,6 @@ obj-$(CONFIG_ARCH_TEGRA) += fuse/
 obj-$(CONFIG_ARCH_TEGRA) += common.o
 obj-$(CONFIG_ARCH_TEGRA) += flowctrl.o
 obj-$(CONFIG_ARCH_TEGRA) += pmc.o
+
+obj-$(CONFIG_ARCH_TEGRA_132_SOC) += tegra132-trampoline.o
+obj-$(CONFIG_ARCH_TEGRA_132_SOC) += pm-tegra132.o
