CHROMIUM: ARM64: dts: tegra132: add flow controller node
Adding flow controller node for Tegra132.

BUG=none
TEST=build and boot on norrin64

Change-Id: I62ef63c34ec249b71c1ba501f7fcac03eb493d98
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/213052
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -40,6 +40,11 @@
 		#reset-cells = <1>;
 	};
 
+	flow-controller@60007000 {
+		compatible = "nvidia,tegra132-flowctrl";
+		reg = <0x0 0x60007000 0x1000>;
+	};
+
 	ahb: ahb {
 		compatible = "nvidia,tegra114-ahb", "nvidia,tegra30-ahb";
 		reg = <0x0 0x6000c004 0x14c>;
