--- a/arch/arm64/boot/dts/tegra132-ryu.dts
+++ b/arch/arm64/boot/dts/tegra132-ryu.dts
@@ -36,6 +36,15 @@
 	i2c@7000c400 {
 		status = "okay";
 		clock-frequency = <400000>;
+
+		ec: cros-ec@1e {
+			compatible = "google,cros-ec-i2c";
+			reg = <0x1e>;
+
+			interrupt-parent = <&gpio>;
+			interrupts = <TEGRA_GPIO(J, 0) IRQ_TYPE_LEVEL_LOW>;
+			wakeup-source;
+		};
 	};
 
 	// I2C3 (CAM_I2C)
