CHROMIUM: arm64: dts: add tegra132 ccplex device
BUG=None
TEST=Can see the cclk_g in clk/clk_summary

Change-Id: I99e21f5a27ac2bcd3be4155008594f53beb0c325
Signed-off-by: Vince Hsu <vinceh@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/212908
Reviewed-by: David Riley <davidriley@chromium.org>
Commit-Queue: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -1,4 +1,5 @@
 #include <dt-bindings/clock/tegra124-car.h>
+#include <dt-bindings/clock/tegra132-ccplex.h>
 #include <dt-bindings/gpio/tegra-gpio.h>
 #include <dt-bindings/pinctrl/pinctrl-tegra.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
@@ -392,6 +393,13 @@
 		clock-names = "fuse";
 		resets = <&tegra_car 39>;
 		reset-names = "fuse";
+	};
+
+	ccplex-clock@70040000 {
+		compatible = "nvidia,tegra132-ccplex-clk";
+		reg = <0x0 0x70040000 0x1000>;
+		status = "okay";
+		#clock-cells = <1>;
 	};
 
 	sdhci@700b0600 {
